fix(sidenav-fab-example): remove `overflow: auto` (#7099)

--- a/src/material-examples/sidenav-fab/sidenav-fab-example.css
+++ b/src/material-examples/sidenav-fab/sidenav-fab-example.css
@@ -16,6 +16,7 @@
 
 .example-scrolling-content {
   overflow: auto;
+  height: 100%;
 }
 
 .example-fab.mat-mini-fab {
